# LenovoLegionLinux

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  FEATURES_AND_TESTING.md  LICENSE  Makefile  README.md  README_zh-hans.md  REVERSE_ENGINEER.md  TESTPLAN.md  lll_patch.sh  setmyfancurve.sh  ubuntu
.github/:  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: build.yml  build_PR.yml  extra.yaml  manual_test.yaml
deploy/: Dockerfile.arch  Dockerfile.fedora  Dockerfile.suse  Dockerfile.ubuntu  Dockerfile.ubuntu.22.04  Dockerfile.ubuntu.24.04  LenovoLegionLinux  LenovoLegionLinux.hook  LenovoLegionLinux.sh  build-dkms.sh  build.sh  build_containers.sh  build_deb.sh  build_deb_dkms.sh  build_deb_rpm.sh  build_docker_ubuntu.sh  build_kernelpatch.sh  build_python.sh  build_rpm.sh  docker-compose.yaml  install.sh  install_dependencies_ubuntu.sh  lenovolegionlinux.spec  python_install_installer_pkg.sh  python_install_pip_pkg.sh  python_uninstall_pkg.sh  reload.sh  test_build_arch_python.sh
deploy/PKGBUILD/: LenovoLegionLinux.install  PKGBUILD
deploy/build_packages/: Dockerfile.ubuntu  build_deb_LLL.sh  build_deb_containers.sh  build_deb_darkdetect.sh  build_rpm_LLL.sh  build_rpm_darkdetect.sh  darkdetect.spec  lenovolegionlinux-dkms.spec  lenovolegionlinux.spec  setup.cfg
deploy/dependencies/: build_xwayland-ubuntu.sh  install_dependencies_arch.sh  install_dependencies_fedora.sh  install_dependencies_suse.sh  install_dependencies_ubuntu-23.04.sh  install_dependencies_ubuntu.sh  install_dependencies_ubuntu_22_04.sh  install_dependencies_ubuntu_24_04.sh  install_development_dependencies.sh  install_development_dependencies_arch.sh  install_development_dependencies_fedora.sh  install_development_dependencies_suse.sh  install_development_dependencies_ubuntu-23.04.sh  install_development_dependencies_ubuntu.sh  install_development_dependencies_ubuntu_22_04.sh  install_development_dependencies_ubuntu_24_04.sh  install_test_dependencies_arch.sh  install_test_dependencies_fedora.sh  install_test_dependencies_ubuntu.sh  install_xwayland-run.sh
deploy/docker_testing/: Dockerfile.fedora  Dockerfile.suse  Dockerfile.ubuntu  build_containers.sh  docker-compose.yaml
deploy/package_testing/: Dockerfile.arch  Dockerfile.fedora  Dockerfile.suse  Dockerfile.ubuntu  build_containers.sh  docker-compose.yaml  download_install_arch_aur.sh  download_install_deb_lll.sh  download_install_deb_ppa.sh  download_install_debian.sh  download_install_fedora_copr.sh  download_install_rpm_ppa.sh
doc/: FEATURES_AND_TESTING.md  TESTPLAN.md
extra/: acpi_install.sh  acpi_installl.sh  gen_spec_issue.sh  spec_issue_template.md  systemd_install.sh
extra/acpi/: PrtSc-button  fn-r-refresh-rate.sh
extra/service/: .env  fancurve-set  legion-linux-onresume.service  legion-linux-restart.path  legion-linux-restart.service  legion-linux.path  legion-linux.service  legiond-cpuset.initd  legiond-cpuset.service  legiond-cpuset.sh  legiond-cpuset.timer  legiond-onresume.service  legiond-onresume.sh  legiond.ini  legiond.initd  legiond.service  lenovo-legion-fan-service.py  restrict-profiles  restrict-profiles.service
kernel_module/: Makefile  dkms.conf  issue-warning.sh  legion-laptop-unused-snippets.c  legion-laptop.c  lenovolegionlinux-dkms-mkrpm.spec  lenovolegionlinux.spec  patch_kernel.sh
kernel_module/6_10_patch/: Kconfig  Makefile
kernel_module/6_1_patch/: Kconfig  Makefile
kernel_module/6_5_patch/: Kconfig  Makefile
kernel_module/6_8_patch/: Kconfig  Makefile
package_repo/: README.md
package_repo/fedora/: LLL.repo  pgp-key.public
python/legion_linux/: README.md  legion.py  legion_cli.py  legion_gui.desktop  legion_gui.policy  legion_gui.py  legion_version.py  lenovolegionlinux.spec  pylintrc  setup.cfg
python/legion_linux/legion_linux/: extra  legion.py  legion_cli.policy  legion_cli.py  legion_gui.desktop  legion_gui.policy  legion_gui.py  legion_gui_user.desktop
tests/: test_checkpath.sh  test_kenel_dkms_install.sh  test_kernel_checkpath.sh  test_kernel_install.sh  test_python.sh  test_python_cli.sh  test_python_cli_installed.sh  test_python_gui.sh  test_python_gui_installed.sh  test_python_installed.sh  test_python_run_gui_root.sh
(+58 files in other folders)
