[metadata]
name = darkdetect
version = _VERSION
author = albertosottile
author_email = albertosottile@example.org
description = Detect OS Dark Mode from Python
long_description = file: README.md
long_description_content_type = text/markdown
license = Custom License
license_files = LICENSE
url = https://github.com/albertosottile/darkdetect
project_urls =
    Bug Tracker = https://github.com/albertosottile/darkdetect/issues
    repository = https://github.com/albertosottile/darkdetect
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:

[options.packages.find]
exclude =
    tests
