[metadata]
name = legion_linux
version = 1.0.0
author = johnfan
author_email = johnfan@example.org
description = Control Lenovo Legion laptop
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnfanv2/LenovoLegionLinux
project_urls =
    Bug Tracker = https://github.com/johnfanv2/LenovoLegionLinux/-/issues
    repository = https://github.com/johnfanv2/LenovoLegionLinux
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    legion_cli= legion_linux.legion_cli:main
    legion_gui= legion_linux.legion_gui:main

[options.package_data]
* = legion_logo.png

[options.data_files]
share/pixmaps/ = 
    legion_linux/legion_logo.png
share/applications/ = 
    legion_linux/legion_gui.desktop
    legion_linux/legion_gui_user.desktop
share/polkit-1/actions/ = 
    legion_linux/legion_cli.policy
share/legion_linux/ =
    legion_linux/extra/service/.env
    legion_linux/extra/service/profiles/*
share/legion_linux/systemd/ =
    legion_linux/extra/service/legion-linux.path
    legion_linux/extra/service/legion-linux.service